<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="main_bg_subtitle">Tap the magnifying glass to get started.</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="no_player_found">No stream player found. Install VLC?</string>
    <string name="no_player_found_toast">No stream player found (you can install VLC to play it).</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="mark_as_watched">Mark as watched</string>
    <string name="open_in_popup_mode">Open in popup mode</string>
    <string name="open_with">Open with</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="controls_download_desc">Download stream file</string>
    <string name="search">Search</string>
    <string name="search_with_service_name">Search %1$s</string>
    <string name="search_with_service_name_and_filter">Search %1$s (%2$s)</string>
    <string name="settings">Settings</string>
    <string name="did_you_mean">Did you mean \"%1$s\"?</string>
    <string name="search_showing_result_for">Showing results for: %s</string>
    <string name="share_dialog_title">Share with</string>
    <string name="use_external_video_player_title">Use external video player</string>
    <string name="use_external_video_player_summary">Removes audio at some resolutions</string>
    <string name="use_external_audio_player_title">Use external audio player</string>
    <string name="subscribe_button_title">Subscribe</string>
    <string name="subscribed_button_title">Subscribed</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="channel_unsubscribed">Channel unsubscribed</string>
    <string name="subscription_change_failed">Could not change subscription</string>
    <string name="subscription_update_failed">Could not update subscription</string>
    <string name="show_info">Show info</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_bookmarks">Bookmarked Playlists</string>
    <string name="tab_bookmarks_short">Playlists</string>
    <string name="tab_choose">Choose Tab</string>
    <string name="controls_background_title">Background</string>
    <string name="controls_popup_title">Popup</string>
    <string name="controls_add_to_playlist_title">Add To</string>
    <string name="download_path_title">Video download folder</string>
    <string name="download_path_summary">Downloaded video files are stored here</string>
    <string name="download_path_dialog_title">Choose download folder for video files</string>
    <string name="download_path_audio_title">Audio download folder</string>
    <string name="download_path_audio_summary">Downloaded audio files are stored here</string>
    <string name="download_path_audio_dialog_title">Choose download folder for audio files</string>
    <string name="default_resolution_title">Default resolution</string>
    <string name="default_popup_resolution_title">Default popup resolution</string>
    <string name="show_higher_resolutions_title">Show higher resolutions</string>
    <string name="show_higher_resolutions_summary">Only some devices can play 2K/4K videos</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="kore_not_found">Install missing Kore app\?</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center</string>
    <string name="crash_the_player">Crash the player</string>
    <string name="notification_scale_to_square_image_title">Crop thumbnail to 1:1 aspect ratio</string>
    <string name="notification_scale_to_square_image_summary">Crop the video thumbnail shown in the notification from 16:9 to 1:1 aspect ratio</string>
    <string name="notification_action_0_title">First action button</string>
    <string name="notification_action_1_title">Second action button</string>
    <string name="notification_action_2_title">Third action button</string>
    <string name="notification_action_3_title">Fourth action button</string>
    <string name="notification_action_4_title">Fifth action button</string>
    <string name="notification_actions_summary">Edit each notification action below by tapping on it. Select up to three of them to be shown in the compact notification by using the checkboxes on the right.</string>
    <string name="notification_actions_summary_android13">Edit each notification action below by tapping on it. The first three actions (play/pause, previous and next) are set by the system and cannot be customized.</string>
    <string name="notification_actions_at_most_three">You can select at most three actions to show in the compact notification!</string>
    <string name="notification_action_repeat">Repeat</string>
    <string name="notification_action_shuffle">Shuffle</string>
    <string name="notification_action_buffering">Buffering</string>
    <string name="notification_action_nothing">Nothing</string>
    <string name="notification_colorize_title">Colorize notification</string>
    <string name="notification_colorize_summary">Have Android customize the notification\'s color according to the main color in the thumbnail (note that this is not available on all devices)</string>
    <string name="play_audio">Audio</string>
    <string name="default_audio_format_title">Default audio format</string>
    <string name="default_video_format_title">Default video format</string>
    <string name="theme_title">Theme</string>
    <string name="night_theme_title">Night theme</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="black_theme_title">Black</string>
    <string name="popup_remember_size_pos_title">Remember popup properties</string>
    <string name="popup_remember_size_pos_summary">Remember last size and position of popup</string>
    <string name="use_inexact_seek_title">Use fast inexact seek</string>
    <string name="use_inexact_seek_summary">Inexact seek allows the player to seek to positions faster with reduced precision. Seeking for 5, 15 or 25 seconds doesn\'t work with this</string>
    <string name="seek_duration_title">Fast-forward/-rewind seek duration</string>
    <string name="progressive_load_interval_title">Playback load interval size</string>
    <string name="progressive_load_interval_summary">Change the load interval size on progressive contents (currently %s). A lower value may speed up their initial loading</string>
    <string name="clear_queue_confirmation_title">Ask for confirmation before clearing a queue</string>
    <string name="clear_queue_confirmation_summary">Switching from one player to another may replace your queue</string>
    <string name="clear_queue_confirmation_description">The active player queue will be replaced</string>
    <string name="ignore_hardware_media_buttons_title">Ignore hardware media button events</string>
    <string name="ignore_hardware_media_buttons_summary">Useful, for instance, if you are using a headset with broken physical buttons</string>
    <string name="seek_on_media_button_events_title">Seek instead of skipping on external media button events</string>
    <string name="seek_on_media_button_events_summary">Imitates behaviour of most Podcast apps</string>
    <string name="show_comments_title">Show comments</string>
    <string name="show_comments_summary">Turn off to hide comments</string>
    <string name="show_next_and_similar_title">Show \'Next\' and \'Similar\' videos</string>
    <string name="show_description_title">Show description</string>
    <string name="show_description_summary">Turn off to hide video description and additional information</string>
    <string name="show_meta_info_title">Show meta info</string>
    <string name="show_meta_info_summary">Turn off to hide meta info boxes with additional information about the stream creator, stream content or a search request</string>
    <string name="prefer_original_audio_title">Prefer original audio</string>
    <string name="prefer_original_audio_summary">Select the original audio track regardless of the language</string>
    <string name="prefer_descriptive_audio_title">Prefer descriptive audio</string>
    <string name="prefer_descriptive_audio_summary">Select an audio track with descriptions for visually impaired people if available</string>
    <string name="thumbnail_cache_wipe_complete_notice">Image cache wiped</string>
    <string name="metadata_cache_wipe_title">Wipe cached metadata</string>
    <string name="metadata_cache_wipe_summary">Remove all cached webpage data</string>
    <string name="metadata_cache_wipe_complete_notice">Metadata cache wiped</string>
    <string name="auto_queue_title">Auto-enqueue next stream</string>
    <string name="auto_queue_summary">Continue ending (non-repeating) playback queue by appending a related stream</string>
    <string name="auto_queue_toggle">Auto-enqueuing</string>
    <string name="left_gesture_control_summary">Choose gesture for left part of player screen</string>
    <string name="left_gesture_control_title">Left gesture action</string>
    <string name="middle_gesture_control_summary">Choose gesture for middle part of player screen</string>
    <string name="middle_gesture_control_title">Middle gesture action</string>
    <string name="right_gesture_control_summary">Choose gesture for right part of player screen</string>
    <string name="right_gesture_control_title">Right gesture action</string>
    <string name="middle_gesture_width_summary">Choose area width for middle part of player screen</string>
    <string name="middle_gesture_width_title">Middle gesture area width</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="settings_category_video_audio_title">Video and audio</string>
    <string name="settings_category_history_title">History and cache</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_player_notification_title">Player notification</string>
    <string name="settings_category_backup_restore_title">Backup and restore</string>
    <string name="content">Content</string>
    <string name="clear">Clear</string>
    <string name="notifications">Notifications</string>
    <string name="import_data_title">Import database</string>
    <string name="export_data_title">Export database</string>
    <string name="import_data_summary">Overrides your current history, subscriptions, playlists and (optionally) settings</string>
    <string name="export_data_summary">Export history, subscriptions, playlists and settings</string>
    <string name="settings_category_downloads_title">Download</string>
    <string name="about_title">About BlackTube</string>
    <string name="reset_settings_title">Reset settings</string>
    <string name="reset_settings_summary">Reset all settings to their default values</string>
    <string name="show_thumbnail_title">Show thumbnail</string>
    <string name="show_thumbnail_summary">Use thumbnail for both lock screen background and notifications</string>
    <string name="sponsor_block">SponsorBlock</string>
    <string name="ai_features_title">AI Features</string>
    <string name="prompt_library_search_hint">Search prompts…</string>
    <string name="prompt_library_default">Default Prompt</string>
    <string name="prompt_editor_title_hint">Prompt title</string>
    <string name="prompt_editor_body_hint">Enter your prompt instructions…</string>
    <string name="save">Save</string>
</resources>