<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_category_backup_restore_title">

    <Preference
        android:key="@string/import_data"
        android:summary="@string/import_data_summary"
        android:title="@string/import_data_title"
        app:icon="@drawable/ic_cloud_download"
        app:iconSpaceReserved="true"
        app:singleLineTitle="false" />

    <Preference
        android:key="@string/export_data"
        android:summary="@string/export_data_summary"
        android:title="@string/export_data_title"
        app:icon="@drawable/ic_backup"
        app:iconSpaceReserved="true"
        app:singleLineTitle="false" />

    <Preference
        android:key="@string/reset_settings"
        android:summary="@string/reset_settings_summary"
        android:title="@string/reset_settings_title"
        app:icon="@drawable/ic_refresh"
        app:iconSpaceReserved="true"
        app:singleLineTitle="false" />

</PreferenceScreen>