<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_category_player_notification_title">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/scale_to_square_image_in_notifications_key"
        android:summary="@string/notification_scale_to_square_image_summary"
        android:title="@string/notification_scale_to_square_image_title"
        app:icon="@drawable/ic_crop_portrait"
        app:iconSpaceReserved="true"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/notification_colorize_key"
        android:summary="@string/notification_colorize_summary"
        android:title="@string/notification_colorize_title"
        app:icon="@drawable/ic_palette"
        app:iconSpaceReserved="true"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/show_thumbnail_key"
        android:summary="@string/show_thumbnail_summary"
        android:title="@string/show_thumbnail_title"
        app:icon="@drawable/ic_art_track"
        app:iconSpaceReserved="true"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:layout="@layout/settings_category_header_layout"
        app:iconSpaceReserved="false">

        <org.schabi.newpipe.settings.custom.NotificationActionsPreference
            app:icon="@drawable/ic_play_arrow"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>

</PreferenceScreen>
